--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
     "name": "gramfel",
     "version": "0.0.0",
     "devDependencies": {
-        "@cloudflare/workers-types": "^4.20230419.0",
-        "@typescript-eslint/eslint-plugin": "^5.59.5",
-        "@typescript-eslint/parser": "^5.59.5",
-        "eslint": "^8.40.0",
-        "prettier": "^2.8.8",
-        "typescript": "^5.0.4",
-        "wrangler": "^2.20.0"
+        "@cloudflare/workers-types": "^4.20231121.0",
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "eslint": "^8.55.0",
+        "prettier": "^3.1.1",
+        "typescript": "^5.3.3",
+        "wrangler": "^3.19.0"
     },
     "private": true,
     "scripts": {
-        "start": "wrangler dev",
-        "deploy": "wrangler publish"
+        "start": "wrangler dev --test-scheduled",
+        "deploy": "wrangler deploy"
     }
 }
